--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "eslint --ext .tsx --ext .ts src/"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.3",
     "expo-status-bar": "~1.0.4",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.17.1",
     "styled-components": "^5.3.1"
   },
