--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.0.4",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.14.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "3.2.0",
