1. 소스의 절대경로 참조를 위한 설정 추가 2. app loading을 위한 초기 코드 추가ㅌ 3. 인증을 위한 구조 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
     "noEmit": true,
     "strict": true,
     "target": "esnext",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "~/*": ["*"]
+      "@Screens/*": ["src/Screens/*"],
+      "@Components/*": ["src/Components/*"],
+      "@assets/*": ["assets/*"]
     }
   },
   "exclude": ["node_modules", "babel.config.js"],
