--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint --ext .tsx --ext .ts src/"
+    "lint": "eslint --ext .tsx --ext .ts src/",
+    "reset": " --reset-cache"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "expo": "~42.0.3",
+    "expo-app-loading": "^1.1.2",
+    "expo-asset": "^8.3.3",
+    "expo-font": "^9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
@@ -31,6 +37,7 @@
     "@types/styled-components-react-native": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
