--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "reset": " --reset-cache"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.10",
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -19,6 +21,7 @@
     "expo-asset": "^8.3.3",
     "expo-font": "^9.2.1",
     "expo-status-bar": "~1.0.4",
+    "graphql": "^15.5.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
