1. apollo 클라이언트 초기 코드 추가 2. .env 관련 설정 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "paths": {
       "@Screens/*": ["src/Screens/*"],
       "@Components/*": ["src/Components/*"],
+      "@Apollo/*": ["src/Apollo/*"],
       "@assets/*": ["assets/*"]
     }
   },
