* signup 기능 exception handling . * ui 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@Screens/*": ["src/Screens/*"],
       "@Components/*": ["src/Components/*"],
       "@Apollo/*": ["src/Apollo/*"],
-      "@assets/*": ["assets/*"]
+      "@assets/*": ["assets/*"],
+      "@Utils/*": ["src/Utils/*"]
     }
   },
   "exclude": ["node_modules", "babel.config.js"],
