--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@types/react-native-calendars": "^1.1264.2",
     "eslint-import-resolver-typescript": "^2.4.0",
     "expo": "~42.0.3",
     "expo-app-loading": "^1.1.2",
@@ -26,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-calendars": "^1.1266.0",
     "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "3.2.0",
